<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RippleActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/ripple_with_border"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:onClick="dummyClick"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/ripple_without_border"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:onClick="dummyClick"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/custom_ripple_with_border"
        android:background="@drawable/custom_ripple_border"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:onClick="dummyClick"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/custom_ripple_without_border"
        android:background="@drawable/custom_ripple_borderless"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:onClick="dummyClick"/>

</LinearLayout>