<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/ripple_effect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ripple_effect"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="checkRippleAnimation"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:onClick="sharedElementTransition"
        android:padding="15dp">

        <ImageView
            android:id="@+id/first_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:transitionName="logo_shared"
            android:src="@drawable/android_logo1"
            android:contentDescription="@string/logo" />
        <TextView
            android:id="@+id/animation_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/animation"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:transitionName="smartherd_shared" />

        <ImageView
            android:id="@+id/second_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:transitionName="profile_pic_shared"
            android:src="@drawable/android_logo2"
            android:contentDescription="@string/profile_pic" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/explode_transition"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="explodeTransitionByCode"
            android:text="Java Code"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="explodeTransitionByXml"
            android:text="XML"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/slide_transition"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="slideTransitionByCode"
            android:text="Java Code"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="slideTransitionByXml"
            android:text="XML"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/fade_transition"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="fadeTransitionByCode"
            android:text="Java Code"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="fadeTransitionByXml"
            android:text="XML"/>

    </LinearLayout>



</LinearLayout>