<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:padding="10dp"
    android:id="@+id/click_reveal"
    tools:context=".ActivitySharedElement">

    <TextView
        android:id="@+id/textDesc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:gravity="center"
        android:elevation="4dp"
        android:visibility="invisible"
        android:background="#13B7D3"/>

    <TextView
        android:id="@+id/activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smartheard"
        android:textColor="@android:color/darker_gray"
        android:textSize="30sp"
        android:transitionName="smartherd_shared"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_below="@id/activity_title">

        <ImageView
            android:id="@+id/logo_reveal"
            android:layout_width="200dp"
            android:layout_height="175dp"
            android:layout_weight="1"
            android:src="@drawable/android_logo1"
            android:transitionName="logo_shared" />
        <ImageView
            android:layout_width="200dp"
            android:layout_height="175dp"
            android:layout_weight="1"
            android:src="@drawable/android_logo2"
            android:transitionName="profile_pic_shared" />

    </LinearLayout>

    <Button
        android:id="@+id/exit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_back_press"
        android:layout_below="@id/textview2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="51dp"/>

    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_to_android_animation"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>